Add website content generated from `49cdf7457eab03df3cc09d9419bb4f40c173dbc8`

--- a/release-notes.html
+++ b/release-notes.html
@@ -612,6 +612,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>StatusLogger now writes to standard error by default. This fixes a regression introduced in 2.23.0. (<a href="https://github.com/apache/logging-log4j2/issues/3665">3665</a>)</p>
 </li>
 <li>
+<p>The ReadOnlyStringMap implementations now support equality comparisons against each other. (<a href="https://github.com/apache/logging-log4j2/issues/3669">3669</a>)</p>
+</li>
+<li>
 <p>Avoid surrogate character handling in <code>JsonWriter</code></p>
 </li>
 </ul>
