Add website content generated from `69b3058e9408717e06fcb0586668e28303a2967c`

--- a/release-notes.html
+++ b/release-notes.html
@@ -615,6 +615,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>The ReadOnlyStringMap implementations now support equality comparisons against each other. (<a href="https://github.com/apache/logging-log4j2/issues/3669">3669</a>)</p>
 </li>
 <li>
+<p>Fixes OSGi descriptor to accept Disruptor 4. (<a href="https://github.com/apache/logging-log4j2/issues/3706">3706</a>)</p>
+</li>
+<li>
 <p>Avoid surrogate character handling in <code>JsonWriter</code></p>
 </li>
 </ul>
@@ -1326,7 +1329,7 @@ system property.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Added support for LMAX Disruptor 4.x (<a href="https://github.com/apache/logging-log4j2/pull/1821">1821</a>)</p>
+<p>Added support for LMAX Disruptor 4.x (<a href="https://github.com/apache/logging-log4j2/issues/1829">1829</a>)</p>
 </li>
 </ul>
 </div>
