Add website content generated from `6fd9c621abd5f57c450ae46efd020a930b206db6`

--- a/development.html
+++ b/development.html
@@ -481,15 +481,12 @@ Pitch it in a <a href="https://logging.apache.org/support.html#discussions-maint
 <div class="sect1">
 <h2 id="committer"><a class="anchor" href="#committer"></a>I am a committer. How shall I push my changes?</h2>
 <div class="sectionbody">
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>Is it something trivial?
-Go ahead and push it.</p>
-</li>
-<li>
-<p>Otherwise, submit a pull request.
-Make sure a changelog entry is attached and <code>./mvnw verify site</code> succeeds.</p>
+<div class="paragraph">
+<p>As per <a href="https://lists.apache.org/thread/rx2hgc5mwql06yzwz2j8wkp8z6nmdcqk">the PMC resolution on 2025-04-10</a>, all changes must be submitted in a pull request and undergo peer review.</p>
+</div>
+<div class="paragraph">
+<p>Make sure a changelog entry is attached, and <code>./mvnw verify site</code> succeeds.</p>
+</div>
 <div class="admonitionblock tip">
 <table>
 <tr>
@@ -503,9 +500,6 @@ Make sure a changelog entry is attached and <code>./mvnw verify site</code> succ
 </td>
 </tr>
 </table>
-</div>
-</li>
-</ol>
 </div>
 </div>
 </div>
