--- a/release-notes.html
+++ b/release-notes.html
@@ -713,6 +713,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.apache.logging:logging-parent</code> to version <code>12.0.0</code></p>
 </li>
 <li>
+<p>Update <code>org.apache.maven:maven-core</code> to version <code>3.9.10</code> (<a href="https://github.com/apache/logging-log4j2/pull/3715">3715</a>)</p>
+</li>
+<li>
 <p>Update <code>org.apache.maven.surefire:surefire-junit47</code> to version <code>3.5.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3162">3162</a>)</p>
 </li>
 <li>
