--- a/release-notes.html
+++ b/release-notes.html
@@ -307,6 +307,16 @@
 <p>This release contains&#8230;&#8203;</p>
 </div>
 <div class="sect2">
+<h3 id="release-notes-3-x-x-added"><a class="anchor" href="#release-notes-3-x-x-added"></a>Added</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Add <code>collectionName</code> and <code>databaseName</code> arguments to the MongoDB appender (<a href="https://github.com/apache/logging-log4j2/pull/3322">3322</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
 <h3 id="release-notes-3-x-x-changed"><a class="anchor" href="#release-notes-3-x-x-changed"></a>Changed</h3>
 <div class="ulist">
 <ul>
@@ -400,13 +410,16 @@
 <p>Update <code>org.apache.commons:commons-pool2</code> to version <code>2.12.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3420">3420</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.groovy:groovy-bom</code> to version <code>4.0.26</code> (<a href="https://github.com/apache/logging-log4j2/pull/3507">3507</a>)</p>
+<p>Update <code>org.apache.groovy:groovy-bom</code> to version <code>4.0.27</code> (<a href="https://github.com/apache/logging-log4j2/pull/3694">3694</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.logging.log4j:log4j-api</code> to version <code>2.24.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3292">3292</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.logging:logging-parent</code> to version <code>12.0.0</code></p>
+</li>
+<li>
+<p>Update <code>org.apache.maven:maven-core</code> to version <code>3.9.10</code> (<a href="https://github.com/apache/logging-log4j2/pull/3716">3716</a>)</p>
 </li>
 <li>
 <p>Update <code>org.assertj:assertj-core</code> to version <code>3.27.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3403">3403</a>)</p>
@@ -418,19 +431,19 @@
 <p>Update <code>org.codehaus.plexus:plexus-utils</code> to version <code>3.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3294">3294</a>)</p>
 </li>
 <li>
-<p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.23.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3529">3529</a>)</p>
+<p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.23.100</code> (<a href="https://github.com/apache/logging-log4j2/pull/3725">3725</a>)</p>
 </li>
 <li>
 <p>Update <code>org.jmdns:jmdns</code> to version <code>3.6.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3537">3537</a>)</p>
 </li>
 <li>
-<p>Update <code>org.junit:junit-bom</code> to version <code>5.12.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3609">3609</a>)</p>
+<p>Update <code>org.junit:junit-bom</code> to version <code>5.13.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3721">3721</a>)</p>
 </li>
 <li>
-<p>Update <code>org.mockito:mockito-bom</code> to version <code>5.16.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3547">3547</a>)</p>
+<p>Update <code>org.mockito:mockito-bom</code> to version <code>5.18.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3680">3680</a>)</p>
 </li>
 <li>
-<p>Update <code>org.mongodb:bson</code> to version <code>5.5.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3654">3654</a>)</p>
+<p>Update <code>org.mongodb:bson</code> to version <code>5.5.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3720">3720</a>)</p>
 </li>
 <li>
 <p>Update <code>org.openjdk.nashorn:nashorn-core</code> to version <code>15.6</code> (<a href="https://github.com/apache/logging-log4j2/pull/3330">3330</a>)</p>
@@ -457,13 +470,16 @@
 <p>Update <code>org.springframework.boot:spring-boot-autoconfigure</code> to version <code>3.4.5</code> (<a href="https://github.com/apache/logging-log4j2/pull/3640">3640</a>)</p>
 </li>
 <li>
-<p>Update <code>org.springframework.cloud:spring-cloud-context</code> to version <code>4.2.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3557">3557</a>)</p>
+<p>Update <code>org.springframework.cloud:spring-cloud-context</code> to version <code>4.3.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3698">3698</a>)</p>
 </li>
 <li>
 <p>Update <code>org.springframework:spring-framework-bom</code> to version <code>6.2.7</code> (<a href="https://github.com/apache/logging-log4j2/pull/3661">3661</a>)</p>
 </li>
 <li>
 <p>Update <code>org.wiremock:wiremock</code> to version <code>3.13.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3637">3637</a>)</p>
+</li>
+<li>
+<p>Update <code>org.xmlunit:xmlunit-core</code> to version <code>2.10.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3683">3683</a>)</p>
 </li>
 <li>
 <p>Update <code>uk.org.webcompere:system-stubs-core</code> to version <code>2.1.8</code> (<a href="https://github.com/apache/logging-log4j2/pull/3589">3589</a>)</p>
