--- a/release-notes.html
+++ b/release-notes.html
@@ -374,6 +374,9 @@
 <li>
 <p>Fix script resolution failure when the <code>Scripts</code> element is placed after a <code>ScriptRef</code> in the configuration. (<a href="https://github.com/apache/logging-log4j2/issues/3336">3336</a>)</p>
 </li>
+<li>
+<p>Move <code>jspecify.version</code> Maven property and <code>java8-tests</code> profile from <code>log4j-bom</code> to <code>log4j-parent</code>, since the former gets trimmed before deployment. (<a href="https://github.com/apache/logging-log4j2/issues/3758">3758</a>)</p>
+</li>
 </ul>
 </div>
 </div>
