Add website content generated from `2a68f85eb2cd610f94a5ffcdb73cad164ca0f4b9`

--- a/release-notes.html
+++ b/release-notes.html
@@ -380,6 +380,16 @@
 </ul>
 </div>
 </div>
+<div class="sect2">
+<h3 id="release-notes-2-x-x-updated"><a class="anchor" href="#release-notes-2-x-x-updated"></a>Updated</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Update <code>org.eclipse.persistence:org.eclipse.persistence.jpa</code> to version <code>2.7.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/3769">3769</a>)</p>
+</li>
+</ul>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
