Add website content generated from `ff03364e0dc07dfc550b5da8b0189e732bf72568`

--- a/release-notes.html
+++ b/release-notes.html
@@ -387,6 +387,9 @@
 <li>
 <p>Update <code>org.eclipse.persistence:org.eclipse.persistence.jpa</code> to version <code>2.7.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/3769">3769</a>)</p>
 </li>
+<li>
+<p>Update <code>org.xmlunit:xmlunit-core</code> to version <code>2.10.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3767">3767</a>)</p>
+</li>
 </ul>
 </div>
 </div>
