--- a/release-notes.html
+++ b/release-notes.html
@@ -368,6 +368,16 @@
 </div>
 </div>
 <div class="sect2">
+<h3 id="release-notes-2-x-x-deprecated"><a class="anchor" href="#release-notes-2-x-x-deprecated"></a>Deprecated</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Deprecated withers in builder classes in favor of setters. This change improves API consistency with 3.x and helps users adapt to the upcoming changes. (<a href="https://github.com/apache/logging-log4j2/issues/3750">3750</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
 <h3 id="release-notes-2-x-x-fixed"><a class="anchor" href="#release-notes-2-x-x-fixed"></a>Fixed</h3>
 <div class="ulist">
 <ul>
