--- a/plugin-reference.html
+++ b/plugin-reference.html
@@ -21506,7 +21506,7 @@ toString(), or to output the value of a specific key within the property bundle 
 </dl>
 </div>
 <div class="paragraph">
-<p>Formats the event sequence number.</p>
+<p>Formats a UUID.</p>
 </div>
 <div class="sect4">
 <h5 id="org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-pattern-UuidPatternConverter_XML-snippet"><a class="anchor" href="#org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-pattern-UuidPatternConverter_XML-snippet"></a>XML snippet</h5>
