--- a/release-notes.html
+++ b/release-notes.html
@@ -385,6 +385,9 @@
 <p>Fix script resolution failure when the <code>Scripts</code> element is placed after a <code>ScriptRef</code> in the configuration. (<a href="https://github.com/apache/logging-log4j2/issues/3336">3336</a>)</p>
 </li>
 <li>
+<p>Fix detection of the Disruptor major version in some environments. (<a href="https://github.com/apache/logging-log4j2/issues/3706">3706</a>)</p>
+</li>
+<li>
 <p>Fix version resolution of <code>jspecify</code> and <code>error_prone_annotations</code> dependencies in published POM files. (<a href="https://github.com/apache/logging-log4j2/issues/3758">3758</a>, <a href="https://github.com/apache/logging-log4j2/issues/3779">3779</a>)</p>
 </li>
 </ul>
