--- a/release-notes.html
+++ b/release-notes.html
@@ -364,6 +364,9 @@
 <li>
 <p>Ensured scripts in global <code>Scripts container</code> have explicit names by throwing a <code>ConfigurationException</code> for unnamed ones. Refined script identification with <code>AbstractScript.getId()</code> and clarified <code>AbstractScript.getName()</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3176">3176</a>)</p>
 </li>
+<li>
+<p>Make <code>-Alog4j.graalvm.groupId</code> and <code>-Alog4j.graalvm.artifactId</code> arguments optional. (<a href="https://github.com/apache/logging-log4j2/issues/3771">3771</a>)</p>
+</li>
 </ul>
 </div>
 </div>
