Add website content generated from `9b663899ebe45f441d7b16e11b04b9a1ac23e98b`

--- a/release-notes.html
+++ b/release-notes.html
@@ -393,6 +393,9 @@
 <li>
 <p>Fix version resolution of <code>jspecify</code> and <code>error_prone_annotations</code> dependencies in published POM files. (<a href="https://github.com/apache/logging-log4j2/issues/3758">3758</a>, <a href="https://github.com/apache/logging-log4j2/issues/3779">3779</a>)</p>
 </li>
+<li>
+<p>Restore backward compatibility with the Spring Boot reconfiguration process. (<a href="https://github.com/apache/logging-log4j2/issues/3770">3770</a>)</p>
+</li>
 </ul>
 </div>
 </div>
