Add website content generated from `3b0c77d5e8195c437bbe690f87180fe3ba44e48d`

--- a/release-notes.html
+++ b/release-notes.html
@@ -367,6 +367,9 @@
 <li>
 <p>Make <code>-Alog4j.graalvm.groupId</code> and <code>-Alog4j.graalvm.artifactId</code> arguments optional. (<a href="https://github.com/apache/logging-log4j2/issues/3771">3771</a>)</p>
 </li>
+<li>
+<p>add a bnd tool property that makes sure that the supported jakarta version has a wider range then 5 to 6 Support the current release version for 5 to 7 (<a href="https://github.com/apache/logging-log4j2/issues/3787">3787</a>)</p>
+</li>
 </ul>
 </div>
 </div>
