Add website content generated from `7da84506296b6cd836475e27ce85404a28a3d5ee`

--- a/release-notes.html
+++ b/release-notes.html
@@ -399,6 +399,9 @@
 <li>
 <p>Restore backward compatibility with the Spring Boot reconfiguration process. (<a href="https://github.com/apache/logging-log4j2/issues/3770">3770</a>)</p>
 </li>
+<li>
+<p>Fix GraalVM reachability metadata generation for methods with annotated array type parameters, such as <code>@Nullable String[]</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3796">3796</a>)</p>
+</li>
 </ul>
 </div>
 </div>
