--- a/release-notes.html
+++ b/release-notes.html
@@ -413,6 +413,9 @@
 <p>Update <code>org.eclipse.persistence:org.eclipse.persistence.jpa</code> to version <code>2.7.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/3769">3769</a>)</p>
 </li>
 <li>
+<p>Update <code>org.junit:junit-bom</code> to version <code>5.13.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3782">3782</a>)</p>
+</li>
+<li>
 <p>Update <code>org.xmlunit:xmlunit-core</code> to version <code>2.10.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3767">3767</a>)</p>
 </li>
 </ul>
