Add website content generated from `3ba9da5eef7c3a65a95a7ca547bbe2852aecb0d3`

--- a/release-notes.html
+++ b/release-notes.html
@@ -410,6 +410,9 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.7-4</code> (<a href="https://github.com/apache/logging-log4j2/pull/3799">3799</a>)</p>
+</li>
+<li>
 <p>Update <code>org.eclipse.persistence:org.eclipse.persistence.jpa</code> to version <code>2.7.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/3769">3769</a>)</p>
 </li>
 <li>
