Add website content generated from `6cd74a88bace5e63fd605256a0dee38cb07ddc8e`

--- a/release-notes.html
+++ b/release-notes.html
@@ -400,6 +400,9 @@
 <p>Restore backward compatibility with the Spring Boot reconfiguration process. (<a href="https://github.com/apache/logging-log4j2/issues/3770">3770</a>)</p>
 </li>
 <li>
+<p>Fix timestamp formatting concurrency issue, when <code>log4j2.enabledThreadlocals</code> is <code>true</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3792">3792</a>)</p>
+</li>
+<li>
 <p>Fix GraalVM reachability metadata generation for methods with annotated array type parameters, such as <code>@Nullable String[]</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3796">3796</a>)</p>
 </li>
 </ul>
