Add website content generated from `cab8ae8944a0651d77401a8424eb4514f6e1da10`

--- a/release-notes.html
+++ b/release-notes.html
@@ -405,6 +405,9 @@
 <li>
 <p>Fix GraalVM reachability metadata generation for methods with annotated array type parameters, such as <code>@Nullable String[]</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3796">3796</a>)</p>
 </li>
+<li>
+<p>Resolves <code>PropertiesConfiguration</code> compatibility issues with GraalVM and addresses additional minor reflection-related problems. (<a href="https://github.com/apache/logging-log4j2/pull/3800">3800</a>)</p>
+</li>
 </ul>
 </div>
 </div>
