Add website content generated from `c5a19557899ce751eb2841d0e7491b535bec2524`

--- a/manual/systemproperties.html
+++ b/manual/systemproperties.html
@@ -2180,7 +2180,8 @@ implementation class or (since version <code>2.24.0</code>) one of the predefine
 </tr>
 <tr>
 <th class="tableblock halign-left valign-top"><p class="tableblock">Default value</p></th>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>file, https, jar</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>file, https, jar</code> (JVM)</p>
+<p class="tableblock"><code>file, https, jar, resource</code> (GraalVM)</p></td>
 </tr>
 </tbody>
 </table>
