--- a/release-notes.html
+++ b/release-notes.html
@@ -400,6 +400,9 @@
 <p>Restore backward compatibility with the Spring Boot reconfiguration process. (<a href="https://github.com/apache/logging-log4j2/issues/3770">3770</a>)</p>
 </li>
 <li>
+<p>Allow <code>resource:</code> protocol for configuration files by default, if the current runtime is GraalVM. (<a href="https://github.com/apache/logging-log4j2/issues/3790">3790</a>)</p>
+</li>
+<li>
 <p>Fix timestamp formatting concurrency issue, when <code>log4j2.enabledThreadlocals</code> is <code>true</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3792">3792</a>)</p>
 </li>
 <li>
