Add website content generated from `b00133be816ad2d95cc1e8afe8eb66bba009591a`

--- a/release-notes.html
+++ b/release-notes.html
@@ -411,6 +411,9 @@
 <li>
 <p>Resolves <code>PropertiesConfiguration</code> compatibility issues with GraalVM and addresses additional minor reflection-related problems. (<a href="https://github.com/apache/logging-log4j2/pull/3800">3800</a>)</p>
 </li>
+<li>
+<p>Corrected an incorrect placeholder count in the AbstractDriverManagerConnectionSource debug log message to prevent unnecessary warnings. (<a href="https://github.com/apache/logging-log4j2/issues/3828">3828</a>)</p>
+</li>
 </ul>
 </div>
 </div>
