--- a/release-notes.html
+++ b/release-notes.html
@@ -364,12 +364,6 @@
 <li>
 <p>Ensured scripts in global <code>Scripts container</code> have explicit names by throwing a <code>ConfigurationException</code> for unnamed ones. Refined script identification with <code>AbstractScript.getId()</code> and clarified <code>AbstractScript.getName()</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3176">3176</a>)</p>
 </li>
-<li>
-<p>Make <code>-Alog4j.graalvm.groupId</code> and <code>-Alog4j.graalvm.artifactId</code> arguments optional. (<a href="https://github.com/apache/logging-log4j2/issues/3771">3771</a>)</p>
-</li>
-<li>
-<p>add a bnd tool property that makes sure that the supported jakarta version has a wider range then 5 to 6 Support the current release version for 5 to 7 (<a href="https://github.com/apache/logging-log4j2/issues/3787">3787</a>)</p>
-</li>
 </ul>
 </div>
 </div>
@@ -391,16 +385,67 @@
 <p>Fix script resolution failure when the <code>Scripts</code> element is placed after a <code>ScriptRef</code> in the configuration. (<a href="https://github.com/apache/logging-log4j2/issues/3336">3336</a>)</p>
 </li>
 <li>
-<p>Fix detection of the Disruptor major version in some environments. (<a href="https://github.com/apache/logging-log4j2/issues/3706">3706</a>)</p>
+<p>Corrected an incorrect placeholder count in the AbstractDriverManagerConnectionSource debug log message to prevent unnecessary warnings. (<a href="https://github.com/apache/logging-log4j2/issues/3828">3828</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="release-notes-2-25-1"><a class="anchor" href="#release-notes-2-25-1"></a>2.25.1</h2>
+<div class="sectionbody">
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Release date</dt>
+<dd>
+<p>2025-07-05</p>
+</dd>
+</dl>
+</div>
+<div class="paragraph">
+<p>This patch release addresses a dozen bugs in version <code>2.25.0</code>, in particular:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Resolves a concurrency issue in the new unified datetime formatter.</p>
 </li>
 <li>
-<p>Fix version resolution of <code>jspecify</code> and <code>error_prone_annotations</code> dependencies in published POM files. (<a href="https://github.com/apache/logging-log4j2/issues/3758">3758</a>, <a href="https://github.com/apache/logging-log4j2/issues/3779">3779</a>)</p>
+<p>Fixes build failures affecting Gradle users.</p>
 </li>
 <li>
-<p>Restore backward compatibility with the Spring Boot reconfiguration process. (<a href="https://github.com/apache/logging-log4j2/issues/3770">3770</a>)</p>
+<p>Restores backward compatibility with Spring Boot’s common logging configuration.</p>
 </li>
 <li>
-<p>Allow <code>resource:</code> protocol for configuration files by default, if the current runtime is GraalVM. (<a href="https://github.com/apache/logging-log4j2/issues/3790">3790</a>)</p>
+<p>Improves handling of edge cases in GraalVM support.</p>
+</li>
+</ul>
+</div>
+<div class="sect2">
+<h3 id="release-notes-2-25-1-fixed"><a class="anchor" href="#release-notes-2-25-1-fixed"></a>Fixed</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Fix detection of the Disruptor major version in environments with non-standard thread context classloader. (<a href="https://github.com/apache/logging-log4j2/issues/3706">3706</a>)</p>
+</li>
+<li>
+<p>Downgrade <code>spotbugs-annotations</code> to resolve Gradle build failures. (<a href="https://github.com/apache/logging-log4j2/issues/3754">3754</a>)</p>
+</li>
+<li>
+<p>Fix incorrect version resolution of <code>jspecify</code> and <code>error_prone_annotations</code> dependencies in published POM files. (<a href="https://github.com/apache/logging-log4j2/issues/3758">3758</a>, <a href="https://github.com/apache/logging-log4j2/issues/3779">3779</a>)</p>
+</li>
+<li>
+<p>Restore compatibility with Spring Boot by allowing reconfiguration using the <code>LoggerContext.start</code> method. (<a href="https://github.com/apache/logging-log4j2/issues/3770">3770</a>)</p>
+</li>
+<li>
+<p>Allow omission of the <code>-Alog4j.graalvm.groupId</code> and <code>-Alog4j.graalvm.artifactId</code> arguments when building Log4j plugins. (<a href="https://github.com/apache/logging-log4j2/issues/3771">3771</a>)</p>
+</li>
+<li>
+<p>Broaden the OSGi manifest&#8217;s <code>Import-Package</code> constraints to support Jakarta Servlet API up to version 6. (<a href="https://github.com/apache/logging-log4j2/issues/3787">3787</a>)</p>
+</li>
+<li>
+<p>Enable the <code>resource:</code> protocol for configuration files by default when running on GraalVM. (<a href="https://github.com/apache/logging-log4j2/issues/3790">3790</a>)</p>
 </li>
 <li>
 <p>Fix timestamp formatting concurrency issue, when <code>log4j2.enabledThreadlocals</code> is <code>true</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3792">3792</a>)</p>
@@ -409,29 +454,7 @@
 <p>Fix GraalVM reachability metadata generation for methods with annotated array type parameters, such as <code>@Nullable String[]</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3796">3796</a>)</p>
 </li>
 <li>
-<p>Resolves <code>PropertiesConfiguration</code> compatibility issues with GraalVM and addresses additional minor reflection-related problems. (<a href="https://github.com/apache/logging-log4j2/pull/3800">3800</a>)</p>
-</li>
-<li>
-<p>Corrected an incorrect placeholder count in the AbstractDriverManagerConnectionSource debug log message to prevent unnecessary warnings. (<a href="https://github.com/apache/logging-log4j2/issues/3828">3828</a>)</p>
-</li>
-</ul>
-</div>
-</div>
-<div class="sect2">
-<h3 id="release-notes-2-x-x-updated"><a class="anchor" href="#release-notes-2-x-x-updated"></a>Updated</h3>
-<div class="ulist">
-<ul>
-<li>
-<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.7-4</code> (<a href="https://github.com/apache/logging-log4j2/pull/3799">3799</a>)</p>
-</li>
-<li>
-<p>Update <code>org.eclipse.persistence:org.eclipse.persistence.jpa</code> to version <code>2.7.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/3769">3769</a>)</p>
-</li>
-<li>
-<p>Update <code>org.junit:junit-bom</code> to version <code>5.13.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3782">3782</a>)</p>
-</li>
-<li>
-<p>Update <code>org.xmlunit:xmlunit-core</code> to version <code>2.10.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3767">3767</a>)</p>
+<p>Resolve <code>PropertiesConfiguration</code> compatibility issues with GraalVM and address additional minor reflection-related problems. (<a href="https://github.com/apache/logging-log4j2/pull/3800">3800</a>)</p>
 </li>
 </ul>
 </div>
